--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -17,9 +17,10 @@
         >
 
         <ListView
+            android:id="@+id/products_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:items="@{viewModel.stateFlow.productList}"
+            app:items="@{viewModel.observableModel.productList}"
             app:itemBinding="@{viewModel.itemBinding}"
             tools:listitem="@layout/view_product"
             />
@@ -37,9 +38,9 @@
                 android:text="Total count:"/>
 
             <TextView
-                android:layout_width="23dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:textInt="@{viewModel.stateFlow.totalProductCount}"
+                app:textInt="@{viewModel.observableModel.totalProductCount}"
                 android:textColor="#222"
                 android:textSize="22sp"
                 tools:text="0" />
